<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.nablarch.framework</groupId>
  <artifactId>nablarch-unpublished-api-checker</artifactId>
  <version>1.0.1-SNAPSHOT</version>

  <name>${project.artifactId}</name>
  <description>Checker for unpublished API in Nablarch Framework.</description>
  <url>https://github.com/nablarch</url>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>nablarch</id>
      <name>Nablarch</name>
      <email>nablarch@tis.co.jp</email>
      <organization>Nablarch</organization>
      <organizationUrl>https://github.com/nablarch</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/nablarch/${project.artifactId}.git</connection>
    <developerConnection>scm:git:git://github.com/nablarch/${project.artifactId}.git</developerConnection>
    <url>https://github.com/nablarch/${project.artifactId}/tree/master</url>
  </scm>

  <properties>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <spotBugsVersion>4.8.3</spotBugsVersion>
    <surefire.plugin.version>2.22.2</surefire.plugin.version>
    <junit.argLine>-Dfile.encoding=utf-8 -Djdk.attach.allowAttachSelf -Djava.locale.providers=JRE,SPI</junit.argLine>
  </properties>

  <!-- CI用にnablarch-parentと同じprofileを設定しておく -->
  <profiles>
    <profile>
      <!-- CI 用のprofile -->
      <id>ci</id>
      <properties>
        <sonar.host.url>${env.SONAR_URL}</sonar.host.url>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.6.2</version>
            <configuration>
              <fork>true</fork>
              <executable>${env.COMPILE_JAVA_HOME}/bin/javac</executable>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${surefire.plugin.version}</version>
            <configuration>
              <jvm>${env.TEST_JDK}/bin/java</jvm>
              <argLine>
                @{argLine} ${junit.argLine}
              </argLine>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.sonarsource.scanner.maven</groupId>
            <artifactId>sonar-maven-plugin</artifactId>
            <version>3.3.0.603</version>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- 開発時のdeploy用のprofile -->
      <id>dev-deploy</id>
      <properties>
        <gpg.skip>true</gpg.skip>
      </properties>
      <distributionManagement>
        <snapshotRepository>
          <id>dev-deploy</id>
          <url>${develop_snapshot_repo_url}</url>
        </snapshotRepository>
        <repository>
          <id>dev-deploy</id>
          <url>${develop_repo_url}</url>
        </repository>
        <site>
          <id>dev-deploy</id>
          <url>${develop_test_report_url}</url>
        </site>
      </distributionManagement>
    </profile>
    <profile>
      <id>ossrh</id>
      <distributionManagement>
        <repository>
          <id>nablarch.staging</id>
          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
          <id>nablarch.snapshot</id>
          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
      </distributionManagement>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencies>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs</artifactId>
      <version>${spotBugsVersion}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>test-harness</artifactId>
      <version>${spotBugsVersion}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jmockit</groupId>
      <artifactId>jmockit</artifactId>
      <version>1.35</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.2</version>
        <configuration>
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.plugin.version}</version>
        <configuration>
          <argLine>
            ${junit.argLine}
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.0</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
        <version>2.1.15</version>
        <executions>
          <execution>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>prepare-package</phase>
          </execution>
        </executions>
        <configuration>
          <verbose>false</verbose>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <git-hash>${git.commit.id}</git-hash>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>xml-maven-plugin</artifactId>
        <version>1.0.2</version>
        <executions>
          <execution>
            <id>validate-spotbugs-configuration</id>
            <goals>
              <goal>validate</goal>
            </goals>
            <configuration>
              <validationSets>
                <validationSet>
                  <dir>src/main/resources</dir>
                  <includes>
                    <include>findbugs.xml</include>
                  </includes>
                  <systemId>findbugsplugin.xsd</systemId>
                </validationSet>
                <validationSet>
                  <dir>src/main/resources</dir>
                  <includes>
                    <include>messages.xml</include>
                    <include>messages_ja.xml</include>
                  </includes>
                  <systemId>messagecollection.xsd</systemId>
                </validationSet>
              </validationSets>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs</artifactId>
            <version>${spotBugsVersion}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>
</project>
